# sudoku-solver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
crates/sudoku-cli/: Cargo.toml
crates/sudoku-cli/src/: main.rs
crates/sudoku-core/: Cargo.toml
crates/sudoku-core/src/: lib.rs
crates/sudoku-ocr/: Cargo.toml
crates/sudoku-ocr/src/: lib.rs
crates/sudoku-wasm/: Cargo.toml
crates/sudoku-wasm/src/: lib.rs
css/: style.css
docs/superpowers/specs/: 2026-06-30-sudoku-camera-pages-design.md
js/: app.js
pkg/: package.json  sudoku_wasm.d.ts  sudoku_wasm.js  sudoku_wasm_bg.wasm  sudoku_wasm_bg.wasm.d.ts
src/: main.rs
web/: index.html
web/css/: style.css
web/js/: app.js  vision.js
web/models/digit-cnn/: NOTICE.txt
