[workspace]
resolver = "2"
members = [
    "crates/sudoku-core",
    "crates/sudoku-wasm",
]
default-members = ["crates/sudoku-core"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["sn99 <siddharthn.099@gmail.com>"]
license = "MIT"
repository = "https://github.com/sn99/sudoku-solver"

[workspace.dependencies]
sudoku-core = { path = "crates/sudoku-core" }
