[package]
name = "sudoku-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI: solve Sudoku from text stdin or image OCR (rusty-tesseract)"

[[bin]]
name = "sudoku-solver"
path = "src/main.rs"

[dependencies]
sudoku-core = { workspace = true }
sudoku-ocr = { workspace = true }
