[package]
name = "sudoku-ocr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sudoku digit OCR via rusty-tesseract (native Tesseract)"

[dependencies]
sudoku-core = { workspace = true }
image = { version = "0.25", default-features = true }
rusty-tesseract = "1.1.10"
thiserror = "2"
